<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

    <Spinner android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <EditText android:text=""
        android:inputType="textNoSuggestions"
        android:id="@+id/username"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:hint="@string/input_user"/>

    <EditText android:text=""
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:hint="@string/input_password"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/button_login"
        android:onClick="login"/>

    </LinearLayout>

</FrameLayout>
